syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.rideApp.RideService";
option java_outer_classname = "RideProto";

service RideService {

  // Public (BFF → RideService)
  rpc CreateRide(CreateRideRequest) returns (CreateRideResponse);
  rpc CancelRide(CancelRideRequest) returns (RideEmpty);

  // Internal (TripService → RideService)
  rpc MarkRideMatched(MarkRideMatchedRequest) returns (RideEmpty);
}

message CreateRideRequest {
  string rider_id = 1;
  double pickup_lat = 2;
  double pickup_lng = 3;
  double drop_lat = 4;
  double drop_lng = 5;
}

message CreateRideResponse {
  string ride_id = 1;
  string status = 2;
}

message CancelRideRequest {
  string ride_id = 1;
  string rider_id = 2;
}

message MarkRideMatchedRequest {
  string ride_id = 1;
  string driver_id = 2;
}

message RideEmpty {}
